--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Spline+Sans+Mono:wght@400;600&display=swap");
 @import "greeting.css";
+@import "clock.css";
 
 body {
   background-color: rgba(0, 0, 0, 0.9);
