--- a/css/clock.css
+++ b/css/clock.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  top: 300px;
+  /* position: relative;
+  top: 300px; */
   color: whitesmoke;
   font-weight: 600;
   font-size: 128px;
