--- a/css/quotes.css
+++ b/css/quotes.css
@@ -3,10 +3,8 @@
   flex-direction: column;
   align-items: center;
   color: whitesmoke;
-  /* position: relative;
-  bottom: -55%; */
 }
 
 .quote span {
-  margin: 10px 0px;
+  margin-bottom: 20px;
 }
