--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 body {
   background-color: rgba(0, 0, 0, 0.9);
   font-family: "Spline Sans Mono", monospace;
-  /* height: 90vh; */
 }
 
 .hidden {
@@ -18,7 +17,9 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
-  top: 290px;
-  /* margin-top: 200px; */
+  margin-top: 270px;
+}
+
+.h25 {
+  height: 25px;
 }
