--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,14 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 270px;
+  justify-content: center;
+  /* margin-top: 270px; */
 }
 
 .h25 {
   height: 25px;
+}
+
+.h100 {
+  height: 100px;
 }
