--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import "clock.css";
 @import "quotes.css";
 @import "background.css";
+@import "todo.css";
 
 body {
   background-color: rgba(0, 0, 0, 0.9);
