--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* margin-top: 270px; */
+  margin-top: 210px;
 }
 
 .h25 {
