--- a/css/greeting.css
+++ b/css/greeting.css
@@ -38,7 +38,8 @@
 
 .greeting {
   display: flex;
-  justify-content: center;
+  text-align: center;
+  /* justify-content: center; */
   color: whitesmoke;
   position: absolute;
 }
