--- a/css/quotes.css
+++ b/css/quotes.css
@@ -2,5 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
   color: whitesmoke;
+  padding: 0px 20px;
+  position: absolute;
+  bottom: 10%;
+  right: 10%;
+  left: 10%;
 }
