--- a/css/todo.css
+++ b/css/todo.css
@@ -1,3 +1,9 @@
+.todo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .todo-form input {
   border: none;
   outline: none;
@@ -9,4 +15,8 @@
 
 .todo-form input::placeholder {
   color: rgb(146, 143, 143);
+}
+
+.todo-list {
+  color: whitesmoke;
 }
